--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,23 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
     <!-- Cores customizadas -->
-    <color name="yellow">#FFFF00</color>
-    <color name="nintendo_red">#E60012</color>
     <color name="texto_botao">#247CF3</color>
-    <color name="primaria">#E91E63</color>
+
+    <!-- Cores customizadas para o tema -->
+    <color name="primaria">#f3722c</color>
+    <color name="primaria_variacao">#00227b</color>
+    <color name="item_primaria">#FFEB3B</color>
+
+    <!-- Cores secundárias -->
+    <color name="secundaria">#8BC34A</color>
+    <color name="item_secundaria">#FFFFFF</color>
+    <color name="fundo">#959595</color>
+
+    <!-- Cores primárias tema escuro -->
+    <color name="primaria_escuro">#E91E63</color>
+    <color name="secundaria_escuro">#EFC137</color>
+
+
 </resources>
