--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,28 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.ComponentesDeInterface" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
 
-        <!-- Primary brand color. -->
+    <!-- Tema base da aplicação -->
+    <style name="Theme.AulaComponentesInterfarce" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+
+        <!-- Cores primárias -->
         <item name="colorPrimary">@color/primaria</item>
-        <!--  <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item> -->
+        <item name="colorPrimaryVariant">@color/primaria_variacao</item>
+        <item name="colorOnPrimary">@color/item_primaria</item>
 
-        <!--  Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <!-- Cores secundárias -->
+        <item name="colorSecondary">@color/secundaria</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/item_secundaria</item>
 
-        <!-- Status bar color. -->
+        <!-- Cor da barra de status -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
+        <!-- Customizações do tema -->
+        <!--<item name="android:windowBackground">@color/white</item>-->
+
     </style>
+
+   <!-- <style name="CaixaTexto" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textColor">@color/secundaria_escuro</item>
+    </style>-->
+
 </resources>
