--- a/app/src/main/res/layout/activity_segunda.xml
+++ b/app/src/main/res/layout/activity_segunda.xml
@@ -11,8 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/btn_jogar"
-        android:textColor="@color/yellow"
+        android:text="@string/botao_jogar"
+        android:textColor="@color/texto_botao"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
