--- a/app/src/main/res/layout/activity_caixa.xml
+++ b/app/src/main/res/layout/activity_caixa.xml
@@ -26,11 +26,13 @@
         android:ems="10"
         android:hint="Digite o seu nome"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/TextInputLayout"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -42,15 +44,18 @@
         app:counterMaxLength="20"
         app:endIconMode="password_toggle"
         app:helperText="Ex: maria@gmail.com"
+        app:helperTextEnabled="true"
+        app:helperTextTextColor="#F01313"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/TextInputEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_email_24"
+            android:layout_height="48dp"
+            android:drawableStart="@drawable/ic_email_24"
             android:drawablePadding="8dp"
             android:hint="Digite seu e-mail"
             android:inputType="textPassword"
