--- a/app/src/main/res/layout/activity_caixa.xml
+++ b/app/src/main/res/layout/activity_caixa.xml
@@ -63,4 +63,15 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Salvar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TextInputLayout" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
