--- a/app/src/main/res/layout/activity_caixa.xml
+++ b/app/src/main/res/layout/activity_caixa.xml
@@ -64,7 +64,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/botao_salvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
