--- a/app/src/main/res/layout/activity_caixa.xml
+++ b/app/src/main/res/layout/activity_caixa.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/TextInputEditText"
+            android:id="@+id/edit_mail"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:drawableStart="@drawable/ic_email_24"
